<!--
strings.xml contains a few key strings in one place, so I can easily edit the app's text from one location

Nathan Hazzard
Version 1.1.6
!-->

<resources>
    <string name="app_name">Undone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">New Task</string>

    <string name="enter_name">Task Name</string>
    <string name="enter_time">Notification Time</string>
    <string name="enter_repeating">Repeat</string>
    <string name="enter_priority">Task Priority</string>
    <string name="enter_details">Task Description</string>

    <string name="defaultSortMethod">"Date"</string>
</resources>
