<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_task_creator" tools:context="com.hazzard.nathan.to_do.TaskCreator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterName"
        android:text="@string/enter_name"
        android:textSize="30dp"
        android:textColor="#444444">
    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskName"
        android:inputType="textNoSuggestions">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterDate"
        android:text="@string/enter_time"
        android:textSize="30dp"
        android:textColor="#444444">
    </TextView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeList">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterRepeating"
        android:text="@string/enter_repeating"
        android:textSize="30dp"
        android:textColor="#444444">
    </TextView>

    <Spinner
        android:id="@+id/repeating_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterPriority"
        android:text="@string/enter_priority"
        android:textSize="30dp"
        android:textColor="#444444">
    </TextView>

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterDetails"
        android:text="@string/enter_details"
        android:textSize="30dp"
        android:textColor="#444444">
    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskDetails"
        android:inputType="textNoSuggestions">
    </EditText>

</LinearLayout>
