<?xml version="1.0" encoding="utf-8"?>

<!--
content_task_editor.xml has all of the content for taskEditor, and is the most important xml file
It's loaded in by activity_task_editor.xml

Nathan Hazzard
Version 1.1.6
!-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_task_editor"
    tools:context=".TaskEditor">

    <TextView
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterName"
        android:text="@string/enter_name"
        android:textSize="25sp"
        android:alpha="0.87"
        android:textColor="#444444">
        <requestFocus/>
    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:id="@+id/taskName"
        android:selectAllOnFocus="true"
        android:inputType="textCapSentences">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterDate"
        android:text="@string/enter_time"
        android:textSize="25sp"
        android:alpha="0.87"
        android:textColor="#444444">
    </TextView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeList">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterRepeating"
        android:text="@string/enter_repeating"
        android:textSize="25sp"
        android:alpha="0.87"
        android:textColor="#444444">
    </TextView>

    <Spinner
        android:id="@+id/repeating_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterPriority"
        android:text="@string/enter_priority"
        android:textSize="25sp"
        android:alpha="0.87"
        android:textColor="#444444">
    </TextView>

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterDetails"
        android:text="@string/enter_details"
        android:textSize="25sp"
        android:alpha="0.87"
        android:textColor="#444444">
    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskDetails"
        android:inputType="textMultiLine">
    </EditText>

</LinearLayout>